<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="7dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/nasa_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nasa_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/btn_refresh"
                    android:onClick="onRefresh"
                    android:src="@drawable/ic_action_refresh" />
            </LinearLayout>

            <ImageView
                android:id="@+id/nasa_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/cartoon" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/nasa_desc" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:background="#ff8D8D8D"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRefresh"
            android:text="@string/btn_refresh" />

        <Button
            android:id="@+id/btn_setwallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setWallpaper"
            android:text="@string/btn_setwallpaper" />
    </LinearLayout>

</LinearLayout>